; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-brcmstb-waketimer.c_wktmr_read.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-brcmstb-waketimer.c_wktmr_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.brcmstb_waketmr = type { i64, i64 }
%struct.wktmr_time = type { i64, i64 }

@BRCMSTB_WKTMR_COUNTER = common dso_local global i64 0, align 8
@BRCMSTB_WKTMR_PRESCALER_VAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.brcmstb_waketmr*, %struct.wktmr_time*)* @wktmr_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wktmr_read(%struct.brcmstb_waketmr* %0, %struct.wktmr_time* %1) #0 {
  %3 = alloca %struct.brcmstb_waketmr*, align 8
  %4 = alloca %struct.wktmr_time*, align 8
  %5 = alloca i64, align 8
  store %struct.brcmstb_waketmr* %0, %struct.brcmstb_waketmr** %3, align 8
  store %struct.wktmr_time* %1, %struct.wktmr_time** %4, align 8
  br label %6

6:                                                ; preds = %21, %2
  %7 = load %struct.brcmstb_waketmr*, %struct.brcmstb_waketmr** %3, align 8
  %8 = getelementptr inbounds %struct.brcmstb_waketmr, %struct.brcmstb_waketmr* %7, i32 0, i32 1
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @BRCMSTB_WKTMR_COUNTER, align 8
  %11 = add nsw i64 %9, %10
  %12 = call i64 @readl_relaxed(i64 %11)
  %13 = load %struct.wktmr_time*, %struct.wktmr_time** %4, align 8
  %14 = getelementptr inbounds %struct.wktmr_time, %struct.wktmr_time* %13, i32 0, i32 1
  store i64 %12, i64* %14, align 8
  %15 = load %struct.brcmstb_waketmr*, %struct.brcmstb_waketmr** %3, align 8
  %16 = getelementptr inbounds %struct.brcmstb_waketmr, %struct.brcmstb_waketmr* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @BRCMSTB_WKTMR_PRESCALER_VAL, align 8
  %19 = add nsw i64 %17, %18
  %20 = call i64 @readl_relaxed(i64 %19)
  store i64 %20, i64* %5, align 8
  br label %21

21:                                               ; preds = %6
  %22 = load i64, i64* %5, align 8
  %23 = load %struct.brcmstb_waketmr*, %struct.brcmstb_waketmr** %3, align 8
  %24 = getelementptr inbounds %struct.brcmstb_waketmr, %struct.brcmstb_waketmr* %23, i32 0, i32 0
  %25 = load i64, i64* %24, align 8
  %26 = icmp sge i64 %22, %25
  br i1 %26, label %6, label %27

27:                                               ; preds = %21
  %28 = load %struct.brcmstb_waketmr*, %struct.brcmstb_waketmr** %3, align 8
  %29 = getelementptr inbounds %struct.brcmstb_waketmr, %struct.brcmstb_waketmr* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* %5, align 8
  %32 = sub nsw i64 %30, %31
  %33 = load %struct.wktmr_time*, %struct.wktmr_time** %4, align 8
  %34 = getelementptr inbounds %struct.wktmr_time, %struct.wktmr_time* %33, i32 0, i32 0
  store i64 %32, i64* %34, align 8
  ret void
}

declare dso_local i64 @readl_relaxed(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
